--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="karantin-kezіnde-oқu-kerektі" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91389458_626623741453065_2396203160801251732_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=hBC4KDUHhXsAX8vvzyQ&oh=b23f92401476c271363fe9354225a30e&oe=5EA847E1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Карантин кезінде оқу керекті">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xx-shymkentte-өtken-9-kүn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=hGo4UDYQ05EAX9Pm7Xc&oh=d3e415b2bfbd4532657149395e0f0e26&oe=5EA64B31" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=eTfp6Bts_RsAX-dnVGc&oh=4d87b1d4b08a56db5d7d44d6f1eea225&oe=5EA64B31" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="virusx-dollar-taғy-basқa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=aiOUr0JhFc0AX_RXlhF&oh=5833f601c3981bcb264e1dfe0b7bb648&oe=5EA64F05" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=poHo0wjaYAgAX-L5iiW&oh=b68cb2440d84f153c83a4b19929144d5&oe=5EA64F05" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-mұnay-әlemdіk-baғasynyң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=eFAA4Grtk94AX9fdNDQ&oh=bbc74c0f235af32de2a2b89d9d30234d&oe=5EA4B70D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=20s8aPGHjhEAX_9d8Gv&oh=4e6e9bbbee12be470c73211beebdd12d&oe=5EA8AB8D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -137,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxөzіңe-senіmsіzdіk-tanytsaң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kf493XaepsUAX_zBOOu&oh=4e065670b22fcee769a889d788437204&oe=5EA43AEB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kf493XaepsUAX_zBOOu&oh=cf4bbade2696f06f7f0cb0ce8f32615a&oe=5EA82F6B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-әtteң-osy-sұraқty-16mln" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=hQVCEFt24lUAX-6mQGg&oh=6bbbfe3a1a687e30545c64b47055f2bd&oe=5EA497DB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=lzBslYpXutkAX9YL6Ed&oh=3595c492a71767e13de8cf94f3264b8f&oe=5EA88C5B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -167,7 +177,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KOnWr9MQRtMAX9_jvDc&oh=9045f7936ef0b19d580d1e53fb1fb9c6&oe=5EA621C2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=BRuWyHeXyikAX9vOrt1&oh=4824f274a5145fc26079e4563b837a81&oe=5EA621C2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=2dRFnFwSFvcAX9LtTum&oh=c21f9e7f5535573b13cdacdfae1ba1ff&oe=5EA6A97F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=W53jKl_856cAX8j7YC9&oh=de0fabd3d855f9df70c3ad903d7fcfd0&oe=5EA6A97F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -207,7 +217,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=FYaOlhaTSE0AX9JDC24&oh=1838b9c0f57973b8c5102bd60130fe04&oe=5EA436E1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=FYaOlhaTSE0AX9JDC24&oh=a4e8b32ca591bec3061503e636ed7883&oe=5EA82B61" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -247,7 +257,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=z0HHG-iIUdIAX9qqjVc&oh=ad47c50832c8d842a1335ff0a79afff6&oe=5EA45818" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=z0HHG-iIUdIAX9qqjVc&oh=4f3369aea774b079a7e82255d4deb9de&oe=5EA84C98" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=n_YYTcDNV6gAX_MHuHx&oh=5d22773a91c9b501ff580c1e97fa53ed&oe=5EA50716" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=9doduY6mpEcAX8d3zgh&oh=f3bda31e82d70981e9d0c2a7f0b76138&oe=5EA50716" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,16 +278,6 @@
 							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=x8nR_XTTS-oAX9Kqhz8&oh=f2b15d2ee6405875d346e94a9c80e7a8&oe=5EA65FD2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xx-30-kүnde-үy-satudyң-3x1-құpiyasy" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=N5yEaoLCmW8AX80QWsH&oh=0b5ecc6cf3680b23fdbca698a0c3f778&oe=5EA78359" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
