--- a/error.html
+++ b/error.html
@@ -91,7 +91,7 @@
 							<a href="./posts/./xx-өz-өmіrіңdі-қiyndatpa.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>187</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>188</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=CrV3-uSEwe0AX-ELdUF&oh=e283b2361702d8d15101670cc23bf1cd&oe=5EA68F72" alt="😏 Өз өміріңді қиындатпа!">
 							</div>
@@ -100,52 +100,43 @@
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>183</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>185</span>
 								</div>
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=0-V7mCcR7rMAX8awOah&oh=cbcf69d63c8c7a090a3ee9a47ec478ef&oe=5EA72D0F" alt="💰 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
-							<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>163</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=U8coZO1SZHMAX9rllm2&oh=38d55331c1444257bd321faebef3e603&oe=5EA61E0A" alt="😊 «2020» жылы жеткен жетістіктерім">
-							</div>
-							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
-						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>148</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>150</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=KOnWr9MQRtMAX9_jvDc&oh=9045f7936ef0b19d580d1e53fb1fb9c6&oe=5EA621C2" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=BRuWyHeXyikAX9vOrt1&oh=4824f274a5145fc26079e4563b837a81&oe=5EA621C2" alt="😮 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">😮 Жарнама жібермей 🍋 тап!</div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>148</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>149</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=2dRFnFwSFvcAX9LtTum&oh=c21f9e7f5535573b13cdacdfae1ba1ff&oe=5EA6A97F" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=W53jKl_856cAX8j7YC9&oh=de0fabd3d855f9df70c3ad903d7fcfd0&oe=5EA6A97F" alt="🤑 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
 						</a>
 							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=FYaOlhaTSE0AX9JDC24&oh=1838b9c0f57973b8c5102bd60130fe04&oe=5EA436E1" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=FYaOlhaTSE0AX9JDC24&oh=a4e8b32ca591bec3061503e636ed7883&oe=5EA82B61" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
 							<a href="./posts/./xxmen-өmіrge-ne-үshіn-keldіm.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>116</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>117</span>
 								</div>
 								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ofI4OItIlVQAX9kid80&oh=9072ee9355764bbb17c0c73e37a7932a&oe=5EA54716" alt="🧐Мен өмірге не үшін келдім?">
 							</div>
@@ -154,11 +145,20 @@
 							<a href="./posts/./xx-әtteң-osy-sұraқty-16mln.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>110</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>111</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=hQVCEFt24lUAX-6mQGg&oh=6bbbfe3a1a687e30545c64b47055f2bd&oe=5EA497DB" alt="😬 Әттең осы сұрақты 16млн">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=lzBslYpXutkAX9YL6Ed&oh=3595c492a71767e13de8cf94f3264b8f&oe=5EA88C5B" alt="😬 Әттең осы сұрақты 16млн">
 							</div>
 							<div class="article-more__item-name">😬 Әттең осы сұрақты 16млн</div>
+						</a>
+							<a href="./posts/./virusx-dollar-taғy-basқa.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>86</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=poHo0wjaYAgAX-L5iiW&oh=b68cb2440d84f153c83a4b19929144d5&oe=5EA64F05" alt="Вирус, доллар тағы басқа">
+							</div>
+							<div class="article-more__item-name">Вирус, доллар тағы басқа</div>
 						</a>
 						</div>
 				</div>
